--- a/metadata.yaml
+++ b/metadata.yaml
@@ -3,4 +3,4 @@ author: "Kx501"
 description: "媒体资源获取工具，用于调用第三方api获取资源，返回给LLM的工具"
 tags: ["媒体资源", "第三方api", "工具"]
 version: "v1.0.0"
-repo: "https://github.com/Kx501/media_api"
+repo: "https://github.com/Kx501/astrbot_plugin_media_api"
